# smartreplenish

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_TO_GITHUB.md  INVESTMENT_MEMO.md  LICENSE  Makefile  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose.yml  fin smartrep.txt  pyproject.toml  pytest.ini  smartreplenish_demo.html  ПЛАН ВЫПОЛНЕНИЯ РАБОТ ПО ПРОЕКТУ «SMARTREPLENISH».txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/api/: forecast.md
docs/architecture/: overview.md
docs/deployment/: production.md
infra/clickhouse/config/: config.xml
infra/clickhouse/init/: 01_init.sql
infra/monitoring/prometheus/: prometheus.yml
infra/postgres/init/: 01_init.sql
notebooks/: eda_and_baseline.ipynb
scripts/: create_test_token.py  generate_test_data.py
services/alerting/: pyproject.toml
services/alerting/src/: __init__.py  config.py  main.py
services/alerting/src/api/: router.py
services/api-gateway/: .dockerignore  Dockerfile  pyproject.toml
services/api-gateway/src/: __init__.py  config.py  main.py
services/api-gateway/src/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
services/api-gateway/src/models/: __init__.py  requests.py  responses.py
services/api-gateway/src/routes/: __init__.py  alerts.py  forecast.py  health.py  optimization.py
services/api-gateway/src/utils/: __init__.py  metrics.py  validators.py
services/api-gateway/tests/: test_routes.py
services/data-ingestion/: Dockerfile  pyproject.toml
services/data-ingestion/config/: sources.yaml.example
services/data-ingestion/src/: __init__.py  main.py
services/feature-store/: Dockerfile  pyproject.toml
services/feature-store/src/: __init__.py  config.py  main.py
services/feature-store/src/api/: router.py
services/forecasting/: .dockerignore  Dockerfile  pyproject.toml
services/forecasting/src/: __init__.py  config.py  main.py
services/forecasting/src/api/: __init__.py  forecast_router.py  metrics_router.py  models_router.py
services/forecasting/tests/: test_api.py
services/frontend/: package.json
services/frontend/public/: index.html
services/frontend/src/: App.js
services/optimization/: pyproject.toml
services/optimization/src/: __init__.py  config.py  main.py
services/optimization/src/api/: router.py
services/optimization/tests/: test_optimizer.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: sample_sales.json
tests/performance/: locustfile.py
