[tool.poetry]
name = "data-ingestion"
version = "1.0.0"
description = "Data ingestion service for SmartReplenish"
authors = ["SmartReplenish Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
clickhouse-connect = "^0.6.0"
kafka-python = "^2.0.2"
pandas = "^2.1.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
