[tool.poetry]
name = "feature-store"
version = "1.0.0"
description = "Feature Store for SmartReplenish ML models"
authors = ["SmartReplenish Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
clickhouse-connect = "^0.6.0"
pandas = "^2.1.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
