[tool.poetry]
name = "forecasting"
version = "1.0.0"
description = "Forecasting service for SmartReplenish"
authors = ["SmartReplenish Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
clickhouse-connect = "^0.6.0"
httpx = "^0.25.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
lightgbm = "^4.1.0"
catboost = "^1.2.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
